--- a/public/pages/JavaIDE.html
+++ b/public/pages/JavaIDE.html
@@ -7,6 +7,13 @@
     <script src="/public/javascripts/basic_utils.js"></script>
     <script>
         const tab = `&nbsp&nbsp&nbsp&nbsp`;
+
+        let userFiles = [new File("Main")];
+
+        let activeFile = 0;
+
+        let userProfile = null;
+
         function analyzeText(event){
         	let ideEdit = document.getElementById("ideEdit");
         	let key = event.key;
@@ -16,7 +23,9 @@
                 //ideEdit.innerHTML = insertAt(ideEdit.innerText, selectedIndex, `&nbsp&nbsp&nbsp&nbsp`);
             }
 			//ideEdit.innerHTML = insertAt(ideEdit.innerText, selectedIndex, autoCompleteBrackets(key));
-			setSelectionIndex(ideEdit, selectedIndex);
+			//setSelectionIndex(ideEdit, selectedIndex);
+
+            userFiles[activeFile].contents = ideEdit.innerHTML.replace(/<br>\s*<\/div>/g, "\n").replace(/<br>/g, "\n").replace(/<div>/g, "").replace(/<\/div>/g, "\n");
         }
 
         function moveCursor(order){
@@ -72,19 +81,35 @@
         function init(){
 
 			let ideEdit = document.getElementById("ideEdit");
-			ideEdit.innerHTML =
-                `public class Test{<br>
-                    <br>
-                    ${tab}\npublic static void main(String[] args){<br>
-                        ${tab}${tab}\nSystem.out.println("Hello");<br>
-                    ${tab}}<br>
+			userFiles[0].contents =
+                `public class Main{
+                    public static void main(String[] args){
+                         System.out.println("Hello");
+                    }
                 }`;
+            send_api_call("/api/java/isUser", "GET", {}, {
+                success: function (data) {
+                    if(!data.isUser) {
+                        while(userProfile == null || userProfile.length < 1)
+                            userProfile = prompt("Please Provide a username:");
+                    }
+                },
+            });
+            reloadTabs();
+            openFile(0);
+
         }
 
         function postCode(callback){
-            let test = new File("Test.java");
-            test.contents = ideEdit.innerText;
-            send_api_call("/api/java/submit", "POST", {files: [test]}, {
+            let tempFiles = [];
+            for(let i = 0; i < userFiles.length; i++) {
+                let file = userFiles[i];
+                let tempFile = new File(file.filename + ".java");
+                tempFile.contents = file.contents.replace(/\u00a0/g, ' ');
+                tempFiles.push(tempFile);
+            }
+
+            send_api_call("/api/java/submit", "POST", {files: tempFiles, tempUsername: userProfile}, {
                 success: function (data) {
                     addStdOut("File Saved");
                     if(callback)
@@ -95,24 +120,31 @@
                 }
             });
         }
-        function compile(){
+
+        function compile(callback){
             postCode(()=>{
-                send_api_call("/api/java/compile", "POST", {}, {
+                send_api_call("/api/java/compile", "POST", {tempUsername: userProfile}, {
                     success: function (data) {
                         addCmdOutput(data);
+                        if(callback)
+                            callback();
                     }
                 });
             });
 
         }
         function run(callback){
-            send_api_call("/api/java/run", "POST", {main: "Test"}, {
-                success: function (data) {
-                    addCmdOutput(data);
-                    if(callback)
-                        callback();
+            let options = document.getElementById("mainFile");
+            compile(() =>{
+                    send_api_call("/api/java/run", "POST", {main: options.value, tempUsername: userProfile}, {
+                        success: function (data) {
+                            addCmdOutput(data);
+                            if(callback)
+                                callback();
+                        }
+                    });
                 }
-            });
+            );
         }
 
         function addCmdOutput(data){
@@ -135,7 +167,37 @@
 
         function File(filename){
             this.filename = filename;
-            this.contents = "";
+            this.contents = `public class ${filename}{
+            }`;
+        }
+        function reloadTabs(){
+
+            let tabBar = document.getElementById("pageTabs");
+            let options = document.getElementById("mainFile");
+            options.innerHTML = '';
+            tabBar.innerHTML = `<span class="tab" onclick="addFile()" style="background: chartreuse; font-weight: bold">+</span>`;
+            for(let i = 0; i < userFiles.length; i++){
+                let file = userFiles[i];
+                tabBar.innerHTML += `<span class="tab ${i === activeFile ? "selectedTab" : ""}" onclick="openFile(${i})">${file.filename}</span>`
+                let option = document.createElement('option');
+                option.appendChild( document.createTextNode(file.filename) );
+                option.value = file.filename;
+                options.appendChild(option);
+
+            }
+        }
+        function addFile(){
+            let filename = prompt("File Name:");
+            if(filename === null || filename.length < 1)
+                return;
+            userFiles.push(new File(filename));
+            reloadTabs();
+        }
+        function openFile(i){
+            let ideEdit = document.getElementById("ideEdit");
+            ideEdit.innerText = userFiles[i].contents;
+            activeFile = i;
+            reloadTabs();
         }
     </script>
     <style>
@@ -149,9 +211,25 @@
             background: #111111;
             border: #BA6E37 solid 2px;
             padding: 1rem 0.5rem 1rem 0.5rem;
-            height: 20rem;
+            height: 22rem;
             color: #CCCCAA;
             overflow-x: auto;
+        }
+        .tab{
+            background: white;
+            border: #000000 solid 1px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            height: 1rem;
+            padding: 0.5rem;
+            position: relative;
+            top: 0.25rem;
+        }
+        .selectedTab{
+            background: #F26507;
+        }
+        #pageTabs{
+            min-height: 2rem;
         }
         .error{
             color: #BC0000;
@@ -162,11 +240,13 @@
 <table style="width: 100%; height: 100%">
     <tr>
         <td style="width: 30%"><div class="output" id="output"></div></td>
-        <td style="width: 70%"><div contenteditable="true" class="ideEdit" onkeydown="" id="ideEdit"></div></td>
+        <td style="width: 70%"><div id="pageTabs"></div><div contenteditable="true" class="ideEdit" onkeyup="analyzeText(event)" id="ideEdit"></div></td>
     </tr>
 </table>
+Main:
+<select id="mainFile" style="width:10rem">
 
-<button onclick="moveCursor(-1)">&lt</button><button onclick="moveCursor(1)">&gt</button><br>
+</select>
 <button onclick="postCode()">Save</button>
 <button onclick="compile()">Compile</button>
 <button onclick="run()">Run</button>
