--- a/public/pages/JavaIDE.html
+++ b/public/pages/JavaIDE.html
@@ -206,6 +206,7 @@
             border: black 1px solid;
             padding: 1rem;
             overflow-x: auto;
+            font-family: monospace;
         }
         .output{
             background: #111111;
