--- a/api-routes/Access.html
+++ b/api-routes/Access.html
@@ -34,7 +34,10 @@
         new endpoint("/api/tracker/tracking", "GET", {}),
         new endpoint("/api/tracker/tracking", "POST", {username: ""}),
         new endpoint("/api/tracker/trackedby", "GET", {}),
-        new endpoint("/api/tracker/trackedby", "PUT", {tracker_id: 0, approval: true}),
+		new endpoint("/api/tracker/trackedby", "PUT", {tracker_id: 0, approval: true}),
+		new endpoint("/api/blog/new", "POST", {date_published: new Date(), is_live: true, title: "", content: "", tags: []}),
+		new endpoint("/api/blog/update", "PUT", {post_id: 0, date_published: new Date(), is_live: true, title: "", content: "", tags: []}),
+		new endpoint("/api/blog/get_author_posts?author=0", "GET", {}),
 
     ];
 
@@ -109,13 +112,17 @@
 <table style="width: 100%; height: 70%">
     <tr>
         <td style="width: 70%;">
-            <input type="text" name="url" id="url" width="40%">
-            <select id="method">
+            <div>
+            <select id="method" style="float: left; width: 5rem;">
                 <option value="POST">POST</option>
                 <option value="GET">GET</option>
                 <option value="PUT">PUT</option>
                 <option value="DELETE">DELETE</option>
-            </select><br>
+            </select>
+                <div style="margin-left: 5rem;">
+            <input type="text" name="url" id="url" style="width:100%;">
+                </div>
+            </div>
             Token:<br>
             <input type="text" name="tolken" id="tolken" style="width:100%;"><br>
             JSON:<br>
