--- a/api-routes/Access.html
+++ b/api-routes/Access.html
@@ -38,6 +38,7 @@
 		new endpoint("/api/blog/new", "POST", {date_published: new Date(), is_live: true, title: "", content: "", tags: []}),
 		new endpoint("/api/blog/update", "PUT", {post_id: 0, date_published: new Date(), is_live: true, title: "", content: "", tags: []}),
 		new endpoint("/api/blog/get_author_posts?author=0", "GET", {}),
+		new endpoint("/api/blog/get_my_posts", "GET", {}),
 
     ];
 
