--- a/private/page-segments/login/registration-form.html
+++ b/private/page-segments/login/registration-form.html
@@ -13,6 +13,7 @@
         <tr><td class="label">Password</td><td><input type="password" name="password"></td><td><span id="passwordError" class="error"></span></td></tr>
 
         <tr><td class="label">Re-enter Password</td><td><input type="password" name="password2"></td><td><span id="password2Error" class="error"></span></td></tr>
-        <tr><td></td><td><input type="submit" value="Register" onClick="return send_registration_request()"></td><td></td></tr>
-    </table>
+
+    </table><div class="g-recaptcha" data-sitekey="<CAPTCHA-CLIENT/>"></div>
+    <input type="submit" value="Register" onClick="return send_registration_request()">
 </form>
